fix(*): fix button alignment BIX-1023

--- a/shared/pages/landing/landing.module.scss
+++ b/shared/pages/landing/landing.module.scss
@@ -202,3 +202,8 @@
     }
   }
 }
+.buttonsContainer {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+}
